# clone-based-optimizations

./: CMakeLists.txt  README.md
add-noalias/: AddNoalias.cpp  AddNoalias.h  CMakeLists.txt  Makefile  PADriver.h
branches/before-gclient/add-noalias/: Makefile  PADriver.cpp
branches/before-gclient/clone-constant-args/: CloneConstantArgs.h
branches/before-gclient/remove-dead-stores/: DeadStoreElimination.h  PADriver.cpp  PADriver.h  PointerAnalysis.cpp
branches/before-gclient/static-profiler/: BranchHeuristicsInfo.cpp  BranchPredictionDot.h  BranchPredictionPass.cpp  StaticFunctionCost.h
branches/with-gclient/: CMakeLists.txt
branches/with-gclient/add-noalias/: AddNoalias.h  CMakeLists.txt  InitStaticModule.cpp
branches/with-gclient/clone-constant-args/: Makefile
branches/with-gclient/function-fusion/: FunctionFusion.cpp  FunctionFusion.h  InitStaticModule.cpp
branches/with-gclient/pa-driver/: InitStaticModule.cpp  PADriver.cpp
branches/with-gclient/poolalloc/: Makefile  configure
branches/with-gclient/remove-dead-stores/: CMakeLists.txt
branches/with-gclient/static-profiler/: BranchPredictionDot.cpp  BranchPredictionInfo.cpp  BranchPredictionInfo.h  BranchPredictionPass.cpp  CMakeLists.txt  ClonesDestroyer.cpp  InitStaticModule.cpp  StaticFunctionCost.cpp
branches/with-gclient/tools/: CMakeLists.txt
branches/with-gclient/tools/bugpoint/: CMakeLists.txt
branches/with-gclient/tools/opt/: CMakeLists.txt
branches/with-gclient/unittests/: CMakeLists.txt
branches/with-gclient/unittests/PointsToAnalysis/cases/: kopf.c
branches/with-gclient/utils/: CMakeLists.txt  InitStaticModule.cpp  RecursionIdentifier.h
clone-constant-args/: CMakeLists.txt  CloneConstantArgs.cpp  CloneConstantArgs.h  InitStaticModule.cpp  Makefile
clone-constant-args/test/: run.sh  sumloop.c
dead-store-elimination/: DeadStoreElimination.cpp  DeadStoreElimination.h  Makefile
doc/static-profiler-gallery/: fact.c
function-fusion/: FunctionFusion.cpp  FunctionFusion.h
function-fusion/test/: a.out  teste.c  teste.ll
include/llvm/: InitializePasses.h  LinkAllPasses.h
include/llvm-c/: Initialization.h
include/llvm/Analysis/: PTA.h
include/llvm/CBO/: CBO.h
lib/: CMakeLists.txt
lib/PointsToAnalysis/: CMakeLists.txt  LCD.h  PointsToSolver.h
lib/Transforms/: CMakeLists.txt  PruneUnusedRetvals.cpp
lib/Transforms/PUR/: CloneUnusedRetvals.cpp  Makefile
pa-driver/: CMakeLists.txt  PADriver.cpp  PADriver.h
poolalloc/: LICENSE.TXT  Makefile.common.in  README
poolalloc/Regressions/: 2006-02-13.ArrayOfObjects.ll  2006-03-04.undefArg.ll  2006-03-05.vaargCall.ll
poolalloc/autoconf/: aclocal.m4
poolalloc/include/assistDS/: TypeChecks.h  TypeChecksOpt.h
poolalloc/include/dsa/: DSGraph.h  DSGraphTraits.h  DSSupport.h
poolalloc/include/poolalloc/: PoolAllocate.h
poolalloc/include/rdsa/: DataStructure.h
poolalloc/lib/AssistDS/: DSNodeEquivs.cpp  GEPExprArgs.cpp  SimplifyGEP.cpp
poolalloc/lib/DSA/: AddressTakenAnalysis.cpp  Basic.cpp  BottomUpClosure.cpp  CMakeLists.txt  CallTargets.cpp  CompleteBottomUp.cpp  DSGraph.cpp  EquivClassGraphs.cpp  GraphChecker.cpp  InitStaticModule.cpp  Makefile  StdLibPass.cpp  TopDownClosure.cpp  TypeSafety.cpp
poolalloc/lib/Macroscopic/: Makefile  StructureFieldVisitor.cpp
poolalloc/lib/PoolAllocate/: Heuristic.cpp  PASimple.cpp  PoolAllocate.cpp  TransformFunctionBody.cpp
poolalloc/lib/rDSA/: DataStructure.cpp  DataStructureAA.cpp  DataStructureOpt.cpp  StdLibPass.cpp
poolalloc/runtime/FreeListAllocator/: PageManager.cpp  PageManager.h  PoolAllocator.cpp  PoolSlab.h
poolalloc/test/: Makefile  TEST.dsgraph.gnuplot  TEST.pavtl.report
pur/: Makefile
remove-dead-stores/: DeadStoreElimination.cpp  DeadStoreElimination.h
remove-dead-stores/test/: teste1.c  teste2.c  teste5.c  teste6.c
static-profiler/: BlockEdgeFrequencyPass.cpp  BlockEdgeFrequencyPass.h  BranchHeuristicsInfo.h  BranchPredictionDot.cpp  CMakeLists.txt  ClonesDestroyer.cpp  InitStaticModule.cpp  StaticFunctionCost.cpp  StaticFunctionCost.h
tools/: CMakeLists.txt
tools/bugpoint/: CMakeLists.txt  bugpoint.cpp
tools/opt/: CMakeLists.txt  opt.cpp
trunk/: CMakeLists.txt  DEPS  Makefile
trunk/add-noalias/: AddNoalias.cpp  AddNoalias.h  CMakeLists.txt  PADriver.cpp  PointerAnalysis.cpp
trunk/clone-constant-args/: CloneConstantArgs.cpp  CloneConstantArgs.h
trunk/clone-constant-args/test/: sum.c
trunk/dead-store-elimination/: CMakeLists.txt  DeadStoreElimination.cpp  DeadStoreElimination.h
trunk/function-fusion/: CMakeLists.txt  FunctionFusion.cpp  FunctionFusion.h  Makefile
trunk/function-fusion/test/: teste2.bc  teste2.ll
trunk/include/llvm/: InitializePasses.h  LinkAllPasses.h
trunk/include/llvm-c/: Initialization.h
trunk/lib/PointsToAnalysis/: ConstraintsGraph.cpp
trunk/pa-driver/: CMakeLists.txt  Makefile  PADriver.cpp
trunk/poolalloc/Regressions/: 2006-02-23.memcpy.ll
trunk/poolalloc/autoconf/: configure.ac
trunk/poolalloc/test/: TEST.optzn.Makefile  TEST.optzn.report  TEST.pacompiletime.Makefile  TEST.pavtl.Makefile  TEST.perf.Makefile  TEST.poolalloc.report  TEST.strace.Makefile
trunk/pur/: CMakeLists.txt  CloneUnusedRetvals.cpp  PruneClones.cpp
trunk/remove-dead-stores/: CMakeLists.txt  DeadStoreElimination.cpp  DeadStoreElimination.h  InitStaticModule.cpp  Makefile
trunk/remove-dead-stores/test/: run.rb  teste1.c  teste2.c  teste3.c  teste4.c
trunk/static-profiler/: BlockEdgeFrequencyPass.cpp  BranchHeuristicsInfo.cpp  BranchHeuristicsInfo.h  BranchPredictionDot.h  BranchPredictionPass.cpp  BranchPredictionPass.h  CMakeLists.txt  ClonesDestroyer.cpp  Makefile  StaticFunctionCost.cpp
trunk/tools/: CMakeLists.txt
trunk/tools/bugpoint/: CMakeLists.txt  (+1 more)
trunk/utils/: CMakeLists.txt  ClonesCleaner.cpp  ClonesStatistics.cpp  InitStaticModule.cpp  RecursionIdentifier.cpp  RecursionIdentifier.h
unittests/PointsToAnalysis/: AndersensTest.cpp  CMakeLists.txt
utils/: ClonesStatistics.cpp  Makefile  RecursionIdentifier.cpp  RecursionIdentifier.h
wiki/: AndersenAliasAnalysis.wiki  Gallery.wiki  HowToCompile.wiki
(+166 files in other folders)
