# `Support' and `TableGen' libraries are added on the top-level CMakeLists.txt

add_subdirectory(../llvm/lib/IR ${CMAKE_CURRENT_BINARY_DIR}/IR)
add_subdirectory(../llvm/lib/IRReader ${CMAKE_CURRENT_BINARY_DIR}/IRReader)
add_subdirectory(../llvm/lib/CodeGen ${CMAKE_CURRENT_BINARY_DIR}/CodeGen)
add_subdirectory(../llvm/lib/Bitcode ${CMAKE_CURRENT_BINARY_DIR}/Bitcode)
add_subdirectory(Transforms)
add_subdirectory(../llvm/lib/Linker ${CMAKE_CURRENT_BINARY_DIR}/Linker)
add_subdirectory(../llvm/lib/Analysis ${CMAKE_CURRENT_BINARY_DIR}/Analysis)
add_subdirectory(../llvm/lib/MC ${CMAKE_CURRENT_BINARY_DIR}/MC)
add_subdirectory(../llvm/lib/Object ${CMAKE_CURRENT_BINARY_DIR}/Object)
add_subdirectory(../llvm/lib/Option ${CMAKE_CURRENT_BINARY_DIR}/Option)
add_subdirectory(../llvm/lib/DebugInfo ${CMAKE_CURRENT_BINARY_DIR}/DebugInfo)
add_subdirectory(../llvm/lib/ExecutionEngine ${CMAKE_CURRENT_BINARY_DIR}/ExecutionEngine)
add_subdirectory(../llvm/lib/Target ${CMAKE_CURRENT_BINARY_DIR}/Target)
add_subdirectory(../llvm/lib/AsmParser ${CMAKE_CURRENT_BINARY_DIR}/AsmParser)
add_subdirectory(../llvm/lib/Archive ${CMAKE_CURRENT_BINARY_DIR}/Archive)
add_subdirectory(PointsToAnalysis)
