add_subdirectory(../../llvm/lib/Transforms/Utils ${CMAKE_CURRENT_BINARY_DIR}/Utils)
add_subdirectory(../../llvm/lib/Transforms/Instrumentation ${CMAKE_CURRENT_BINARY_DIR}/Instrumentation)
add_subdirectory(../../llvm/lib/Transforms/InstCombine ${CMAKE_CURRENT_BINARY_DIR}/InstCombine)
add_subdirectory(../../llvm/lib/Transforms/Scalar ${CMAKE_CURRENT_BINARY_DIR}/Scalar)
add_subdirectory(../../llvm/lib/Transforms/IPO ${CMAKE_CURRENT_BINARY_DIR}/IPO)
add_subdirectory(../../llvm/lib/Transforms/Vectorize ${CMAKE_CURRENT_BINARY_DIR}/Vectorize)
add_subdirectory(../../llvm/lib/Transforms/Hello ${CMAKE_CURRENT_BINARY_DIR}/Hello)
add_subdirectory(../../llvm/lib/Transforms/ObjCARC ${CMAKE_CURRENT_BINARY_DIR}/ObjCARC)
add_subdirectory(PUR)
